--- a/page.html
+++ b/page.html
@@ -1,1 +1,5 @@
-<p>This is my first webpage</p><p>isn't it nice</p>
+<h1>My first webpage</h1>
+<h2>Written with mob love by Richi</h2>
+
+<p>This is my first webpage?</p>
+<p>isn't it nice</p>
