folder for images

--- a/page.html
+++ b/page.html
@@ -1,5 +1,16 @@
-<h1>My first webpage</h1>
+<h1>This is my <strong>first webpage</strong>!</h1>
 <h2>Written with mob love by Richi</h2>
 
 <p>This is my first webpage?</p>
-<p>isn't it nice</p>
+<p>isn't it <strong>nice</strong></p>
+
+<P>Here are some <em>things</em> I'm going to learn about coding</p>
+
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>GitHub</li>
+  </ul>
+<p>Check out: <a href="http://richmondthuku.blogspot.co.ke/">Richmond Blog</a> It's a great place to find out more about me!</p>
+<img src="images/chowder2.png" alt="This here is Chowder Lol!">
