check the image address

--- a/page.html
+++ b/page.html
@@ -13,4 +13,4 @@
     <li>GitHub</li>
   </ul>
 <p>Check out: <a href="http://richmondthuku.blogspot.co.ke/">Richmond Blog</a> It's a great place to find out more about me!</p>
-<img src="images/chowder2.png" alt="This here is Chowder Lol!">
+<img src="images/chowder2.png" alt="This here is Chowder">
